[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/Pixel Health Bar/Health/no health.png" type="Texture" id=1]
[ext_resource path="res://assets/Pixel Health Bar/Health/health.png" type="Texture" id=2]
[ext_resource path="res://scripts/Player_manabar.gd" type="Script" id=3]
[ext_resource path="res://assets/font/Silver.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 13
extra_spacing_top = -1
font_data = ExtResource( 4 )

[node name="Player_manabar" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Mana_bar" type="TextureProgress" parent="."]
margin_right = 128.0
margin_bottom = 24.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 2 )
tint_under = Color( 1, 1, 1, 0.639216 )
tint_progress = Color( 0, 0, 1, 1 )

[node name="Container" type="Control" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 124.0
margin_bottom = 15.0

[node name="total_mana" type="Label" parent="Container"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -43.0
margin_top = -1.0
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
text = "0/0"
align = 1
valign = 1
clip_text = true

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
